objects/ProfileData__c.object
<CustomObject>
    <fields>
        <fullName>DTime__c</fullName>
        <label>DTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data1__c</fullName>
        <label>Data1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data2__c</fullName>
        <label>Data2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data3__c</fullName>
        <label>Data3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <label>DataType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom App Settings</fullName>
                </value>
                <value>
                    <fullName>Tab Settings</fullName>
                </value>
                <value>
                    <fullName>Record Type Settings</fullName>
                </value>
                <value>
                    <fullName>Administrative &amp; General User Permissions</fullName>
                </value>
                <value>
                    <fullName>Object Permissions</fullName>
                </value>
                <value>
                    <fullName>Desktop Integration Clients</fullName>
                </value>
                <value>
                    <fullName>Login Hours</fullName>
                </value>
                <value>
                    <fullName>Login IP Ranges</fullName>
                </value>
                <value>
                    <fullName>Apex Class Access</fullName>
                </value>
                <value>
                    <fullName>Visualforce Page Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrgWiseProfileName__c</fullName>
        <formula>Name + &apos;( &apos; + Organization_Details__r.Organization_Name__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrgWiseProfileName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization_Details</label>
        <referenceTo>Organization_Details__c</referenceTo>
        <relationshipLabel>ProfilesData</relationshipLabel>
        <relationshipName>ProfilesData</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ProfileData</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Organization_Details__c</columns>
        <columns>OrgWiseProfileName__c</columns>
        <columns>NAME</columns>
        <columns>DataType__c</columns>
        <columns>Data1__c</columns>
        <columns>Data2__c</columns>
        <columns>Data3__c</columns>
        <columns>Data4__c</columns>
        <columns>Data5__c</columns>
        <columns>Data6__c</columns>
        <columns>Data7__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProfileName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProfilesData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>